--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,10 +1,10 @@
 body, html {
-    height: 600px;
-    width: 400px;
+    height: 250px;
+    width: 350px;
     overflow: hidden;
 }
 body {
-  /*padding: 20px;*/
+  /*padding: 5px 20px;*/
 }
 
 .panel-body {
@@ -13,4 +13,16 @@ body {
 
 .panel-primary{
     max-height: 600px;
+}
+
+.form-group{
+	height: 26px;
+}
+
+.good-padding{
+	padding: 5px 20px;
+}
+
+#submit-login{
+	margin-left: 185px;
 }
