--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,7 +1,7 @@
 body, html {
     height: 300px;
     width: 350px;
-    overflow: hidden;
+    overflow: scroll;
 }
 body {
   /*padding: 5px 20px;*/
